DOTParser.py
# Generated from DOT.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DOTParser ( Parser ):

    grammarFileName = "DOT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'strict'", "'digraph'", "'{'", "'}'", 
                     "';'", "'graph'", "'node'", "'edge'", "'['", "']'", 
                     "','", "'label'", "'\"label\"'", "'='", "'->'", "':'", 
                     "'subgraph'", "'comment'", "'\"comment\"'", "'\"+'", 
                     "'+\"'", "'-'", "'.'", "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "QuoteString", "Direction", "Uppercase_letter", 
                      "Lowercase_letter", "Digit", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_graph = 0
    RULE_stmt_list = 1
    RULE_stmt = 2
    RULE_attr_stmt = 3
    RULE_attr_list = 4
    RULE_attr_label = 5
    RULE_a_list = 6
    RULE_a_label = 7
    RULE_edge_stmt = 8
    RULE_edgeRHS = 9
    RULE_node_stmt = 10
    RULE_node_id = 11
    RULE_port = 12
    RULE_subgraph_stmt = 13
    RULE_assignment = 14
    RULE_comment = 15
    RULE_comment_content = 16
    RULE_indipendence_comment = 17
    RULE_identifier = 18
    RULE_identifier_no_quote = 19
    RULE_string = 20
    RULE_number = 21
    RULE_letter_digit = 22
    RULE_letter = 23

    ruleNames =  [ "graph", "stmt_list", "stmt", "attr_stmt", "attr_list", 
                   "attr_label", "a_list", "a_label", "edge_stmt", "edgeRHS", 
                   "node_stmt", "node_id", "port", "subgraph_stmt", "assignment", 
                   "comment", "comment_content", "indipendence_comment", 
                   "identifier", "identifier_no_quote", "string", "number", 
                   "letter_digit", "letter" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    QuoteString=25
    Direction=26
    Uppercase_letter=27
    Lowercase_letter=28
    Digit=29
    WS=30
    COMMENT=31
    LINE_COMMENT=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GraphContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(DOTParser.IdentifierContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(DOTParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_graph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraph" ):
                listener.enterGraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraph" ):
                listener.exitGraph(self)




    def graph(self):

        localctx = DOTParser.GraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_graph)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DOTParser.T__0:
                self.state = 48
                self.match(DOTParser.T__0)


            self.state = 51
            self.match(DOTParser.T__1)
            self.state = 52
            self.identifier()
            self.state = 53
            self.match(DOTParser.T__2)
            self.state = 54
            self.stmt_list()
            self.state = 55
            self.match(DOTParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(DOTParser.StmtContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(DOTParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)




    def stmt_list(self):

        localctx = DOTParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__2) | (1 << DOTParser.T__5) | (1 << DOTParser.T__6) | (1 << DOTParser.T__7) | (1 << DOTParser.T__10) | (1 << DOTParser.T__16) | (1 << DOTParser.T__21) | (1 << DOTParser.T__22) | (1 << DOTParser.T__23) | (1 << DOTParser.QuoteString) | (1 << DOTParser.Uppercase_letter) | (1 << DOTParser.Lowercase_letter) | (1 << DOTParser.Digit))) != 0):
                self.state = 57
                self.stmt()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DOTParser.T__4:
                    self.state = 58
                    self.match(DOTParser.T__4)


                self.state = 61
                self.stmt_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node_stmt(self):
            return self.getTypedRuleContext(DOTParser.Node_stmtContext,0)


        def edge_stmt(self):
            return self.getTypedRuleContext(DOTParser.Edge_stmtContext,0)


        def attr_stmt(self):
            return self.getTypedRuleContext(DOTParser.Attr_stmtContext,0)


        def assignment(self):
            return self.getTypedRuleContext(DOTParser.AssignmentContext,0)


        def subgraph_stmt(self):
            return self.getTypedRuleContext(DOTParser.Subgraph_stmtContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = DOTParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.node_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.edge_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.attr_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.assignment()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.subgraph_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_list(self):
            return self.getTypedRuleContext(DOTParser.Attr_listContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_attr_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_stmt" ):
                listener.enterAttr_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_stmt" ):
                listener.exitAttr_stmt(self)




    def attr_stmt(self):

        localctx = DOTParser.Attr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attr_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__5) | (1 << DOTParser.T__6) | (1 << DOTParser.T__7))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 73
            self.attr_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def a_list(self):
            return self.getTypedRuleContext(DOTParser.A_listContext,0)


        def attr_list(self):
            return self.getTypedRuleContext(DOTParser.Attr_listContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_attr_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_list" ):
                listener.enterAttr_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_list" ):
                listener.exitAttr_list(self)




    def attr_list(self):

        localctx = DOTParser.Attr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attr_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(DOTParser.T__8)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__10) | (1 << DOTParser.T__17) | (1 << DOTParser.T__18) | (1 << DOTParser.T__21) | (1 << DOTParser.T__22) | (1 << DOTParser.T__23) | (1 << DOTParser.QuoteString) | (1 << DOTParser.Uppercase_letter) | (1 << DOTParser.Lowercase_letter) | (1 << DOTParser.Digit))) != 0):
                self.state = 76
                self.a_list()


            self.state = 79
            self.match(DOTParser.T__9)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DOTParser.T__8:
                self.state = 80
                self.attr_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_labelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def a_label(self):
            return self.getTypedRuleContext(DOTParser.A_labelContext,0)


        def attr_list(self):
            return self.getTypedRuleContext(DOTParser.Attr_listContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_attr_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_label" ):
                listener.enterAttr_label(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_label" ):
                listener.exitAttr_label(self)




    def attr_label(self):

        localctx = DOTParser.Attr_labelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attr_label)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(DOTParser.T__8)
            self.state = 84
            self.a_label()
            self.state = 85
            self.match(DOTParser.T__9)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DOTParser.T__8:
                self.state = 86
                self.attr_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class A_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comment(self):
            return self.getTypedRuleContext(DOTParser.CommentContext,0)


        def assignment(self):
            return self.getTypedRuleContext(DOTParser.AssignmentContext,0)


        def a_list(self):
            return self.getTypedRuleContext(DOTParser.A_listContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_a_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterA_list" ):
                listener.enterA_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitA_list" ):
                listener.exitA_list(self)




    def a_list(self):

        localctx = DOTParser.A_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_a_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DOTParser.T__17, DOTParser.T__18]:
                self.state = 89
                self.comment()
                pass
            elif token in [DOTParser.T__10, DOTParser.T__21, DOTParser.T__22, DOTParser.T__23, DOTParser.QuoteString, DOTParser.Uppercase_letter, DOTParser.Lowercase_letter, DOTParser.Digit]:
                self.state = 90
                self.assignment()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 93
                _la = self._input.LA(1)
                if not(_la==DOTParser.T__4 or _la==DOTParser.T__10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__10) | (1 << DOTParser.T__17) | (1 << DOTParser.T__18) | (1 << DOTParser.T__21) | (1 << DOTParser.T__22) | (1 << DOTParser.T__23) | (1 << DOTParser.QuoteString) | (1 << DOTParser.Uppercase_letter) | (1 << DOTParser.Lowercase_letter) | (1 << DOTParser.Digit))) != 0):
                self.state = 96
                self.a_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class A_labelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(DOTParser.IdentifierContext,0)


        def a_list(self):
            return self.getTypedRuleContext(DOTParser.A_listContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_a_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterA_label" ):
                listener.enterA_label(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitA_label" ):
                listener.exitA_label(self)




    def a_label(self):

        localctx = DOTParser.A_labelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_a_label)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            _la = self._input.LA(1)
            if not(_la==DOTParser.T__11 or _la==DOTParser.T__12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 100
            self.match(DOTParser.T__13)
            self.state = 101
            self.identifier()
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 102
                _la = self._input.LA(1)
                if not(_la==DOTParser.T__4 or _la==DOTParser.T__10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__10) | (1 << DOTParser.T__17) | (1 << DOTParser.T__18) | (1 << DOTParser.T__21) | (1 << DOTParser.T__22) | (1 << DOTParser.T__23) | (1 << DOTParser.QuoteString) | (1 << DOTParser.Uppercase_letter) | (1 << DOTParser.Lowercase_letter) | (1 << DOTParser.Digit))) != 0):
                self.state = 105
                self.a_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Edge_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def edgeRHS(self):
            return self.getTypedRuleContext(DOTParser.EdgeRHSContext,0)


        def attr_label(self):
            return self.getTypedRuleContext(DOTParser.Attr_labelContext,0)


        def node_id(self):
            return self.getTypedRuleContext(DOTParser.Node_idContext,0)


        def subgraph_stmt(self):
            return self.getTypedRuleContext(DOTParser.Subgraph_stmtContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_edge_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdge_stmt" ):
                listener.enterEdge_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdge_stmt" ):
                listener.exitEdge_stmt(self)




    def edge_stmt(self):

        localctx = DOTParser.Edge_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_edge_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DOTParser.T__10, DOTParser.T__21, DOTParser.T__22, DOTParser.T__23, DOTParser.QuoteString, DOTParser.Uppercase_letter, DOTParser.Lowercase_letter, DOTParser.Digit]:
                self.state = 108
                self.node_id()
                pass
            elif token in [DOTParser.T__2, DOTParser.T__16]:
                self.state = 109
                self.subgraph_stmt()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 112
            self.edgeRHS()
            self.state = 113
            self.attr_label()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeRHSContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node_id(self):
            return self.getTypedRuleContext(DOTParser.Node_idContext,0)


        def subgraph_stmt(self):
            return self.getTypedRuleContext(DOTParser.Subgraph_stmtContext,0)


        def edgeRHS(self):
            return self.getTypedRuleContext(DOTParser.EdgeRHSContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_edgeRHS

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeRHS" ):
                listener.enterEdgeRHS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeRHS" ):
                listener.exitEdgeRHS(self)




    def edgeRHS(self):

        localctx = DOTParser.EdgeRHSContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_edgeRHS)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(DOTParser.T__14)
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DOTParser.T__10, DOTParser.T__21, DOTParser.T__22, DOTParser.T__23, DOTParser.QuoteString, DOTParser.Uppercase_letter, DOTParser.Lowercase_letter, DOTParser.Digit]:
                self.state = 116
                self.node_id()
                pass
            elif token in [DOTParser.T__2, DOTParser.T__16]:
                self.state = 117
                self.subgraph_stmt()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DOTParser.T__14:
                self.state = 120
                self.edgeRHS()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Node_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node_id(self):
            return self.getTypedRuleContext(DOTParser.Node_idContext,0)


        def attr_list(self):
            return self.getTypedRuleContext(DOTParser.Attr_listContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_node_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode_stmt" ):
                listener.enterNode_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode_stmt" ):
                listener.exitNode_stmt(self)




    def node_stmt(self):

        localctx = DOTParser.Node_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_node_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.node_id()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DOTParser.T__8:
                self.state = 124
                self.attr_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Node_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(DOTParser.IdentifierContext,0)


        def port(self):
            return self.getTypedRuleContext(DOTParser.PortContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_node_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode_id" ):
                listener.enterNode_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode_id" ):
                listener.exitNode_id(self)




    def node_id(self):

        localctx = DOTParser.Node_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_node_id)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.identifier()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DOTParser.T__15:
                self.state = 128
                self.port()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DOTParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(DOTParser.IdentifierContext,i)


        def getRuleIndex(self):
            return DOTParser.RULE_port

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort" ):
                listener.enterPort(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort" ):
                listener.exitPort(self)




    def port(self):

        localctx = DOTParser.PortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_port)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(DOTParser.T__15)
            self.state = 132
            self.identifier()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DOTParser.T__15:
                self.state = 133
                self.match(DOTParser.T__15)
                self.state = 134
                self.identifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subgraph_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_list(self):
            return self.getTypedRuleContext(DOTParser.Stmt_listContext,0)


        def identifier(self):
            return self.getTypedRuleContext(DOTParser.IdentifierContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_subgraph_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubgraph_stmt" ):
                listener.enterSubgraph_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubgraph_stmt" ):
                listener.exitSubgraph_stmt(self)




    def subgraph_stmt(self):

        localctx = DOTParser.Subgraph_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_subgraph_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DOTParser.T__16:
                self.state = 137
                self.match(DOTParser.T__16)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DOTParser.T__10) | (1 << DOTParser.T__21) | (1 << DOTParser.T__22) | (1 << DOTParser.T__23) | (1 << DOTParser.QuoteString) | (1 << DOTParser.Uppercase_letter) | (1 << DOTParser.Lowercase_letter) | (1 << DOTParser.Digit))) != 0):
                    self.state = 138
                    self.identifier()




            self.state = 143
            self.match(DOTParser.T__2)
            self.state = 144
            self.stmt_list()
            self.state = 145
            self.match(DOTParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DOTParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(DOTParser.IdentifierContext,i)


        def getRuleIndex(self):
            return DOTParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = DOTParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.identifier()
            self.state = 148
            self.match(DOTParser.T__13)
            self.state = 149
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comment_content(self):
            return self.getTypedRuleContext(DOTParser.Comment_contentContext,0)


        def getRuleIndex(self):
            return DOTParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = DOTParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not(_la==DOTParser.T__17 or _la==DOTParser.T__18):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 152
            self.match(DOTParser.T__13)
            self.state = 153
            self.comment_content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comment_contentContext(ParserRuleContext):
        __slots__ = 'parser'
